--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
 *{
-
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -38,6 +37,7 @@ body{
    padding-top: 2.1em;
     border-radius: 0.74em;
     padding-bottom: 2em;
+    max-width: 365px;
 }
 
 
@@ -85,3 +85,47 @@ body{
     border-radius: 0.3em;
 }
 
+@media screen and (min-width:875px) and (max-width:1030px){
+ body{
+     background-color: maroon;
+ }
+ .categories{
+     border: 1px solid hotpink;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+.categories .sub_cate{
+    width: 30%;
+    max-width: 295px;
+}
+.categories .sub_cate .plan_amt{
+    font-size: 2.4em;
+    border: 1px solid magenta;
+    width: 99%;
+    text-align: center;
+}
+}
+
+@media screen and (min-width:1030px){
+    body{
+        background-color: cyan;
+    }
+    .categories{
+        display: flex;
+        justify-content: space-around;
+        text-align: center;
+    }
+    .categories .sub_cate{
+        width: 27%;
+        max-width: 325px;
+    }
+    .categories .sub_cate .plan_amt{
+        font-size: 3em;
+        border: 1px solid magenta;
+        width: 99%;
+        text-align: center;
+    }
+}
