--- a/style.css
+++ b/style.css
@@ -12,11 +12,9 @@ body{
 }   
 
 .main_container{
-    border: 1px solid magenta;
     text-align: center;
 }
 .main_container .heading{
-    border: 1px solid maroon;
     padding: 0.5em;
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing:1px;
@@ -24,7 +22,7 @@ body{
 }
 
 .categories{
-     border: 1px solid black;
+     /* border: 1px solid black; */
         font-family: Montserrat;
        text-align: center;
 }
@@ -42,7 +40,7 @@ body{
 
 
 .sub_cate .plan{
-    border: 1px solid hotpink;
+    /* border: 1px solid hotpink; */
     font-weight: 200;
     font-size: 1.1rem;
     color:  hsl(233, 13%, 49%);
@@ -53,7 +51,7 @@ body{
     padding:0.4em 0rem;
     letter-spacing: 1px;
     color: hsl(225, 2%, 38%);
-    font-size:3.4em;
+    font-size:2.4em;
 }
 
 .sub_cate .service_details li{
@@ -85,12 +83,12 @@ body{
     border-radius: 0.3em;
 }
 
-@media screen and (min-width:760px) and (max-width:1030px){
- body{
+@media screen and (min-width:655px) and (max-width:1030px){
+ /* body{
      background-color: maroon;
- }
+ } */
  .categories{
-     border: 1px solid hotpink;
+     /* border: 1px solid hotpink; */
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -98,20 +96,20 @@ body{
     justify-content: center;
 }
 .categories .sub_cate{
-    width: 295px;
+    width: 290px;
 }
 .categories .sub_cate .plan_amt{
     font-size: 2.4em;
-    border: 1px solid magenta;
+    /* border: 1px solid magenta; */
     width: 99%;
     text-align: center;
 }
 }
 
 @media screen and (min-width:1030px){
-    body{
+    /* body{
         background-color: cyan;
-    }
+    } */
     .categories{
         display: flex;
         justify-content: space-around;
@@ -122,8 +120,8 @@ body{
         max-width: 325px;
     }
     .categories .sub_cate .plan_amt{
-        font-size: 3em;
-        border: 1px solid magenta;
+        font-size: 2.5em;
+        /* border: 1px solid magenta; */
         width: 99%;
         text-align: center;
     }
