--- a/demo.css
+++ b/demo.css
@@ -1,18 +1,56 @@
 
 *{
+    border: 1px solid black;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-main .outer_container {
-    width: 100%;
-    height: 500px;
-    border: 1 px solid lawngreen;
+body{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin: 5em  ;
 }
-.outer_container .inner_container{
-    border: 1px solid black;
+
+.outer_container{
+    margin: 0px auto;
+    display: flex;
+    align-items: center;
+    position: relative;
     width: 100px;
     height: 40px;
-    padding: 4em 2.3em;
+    border: 1px solid magenta;
+    border-radius: 40px;
+    cursor: pointer;
+    box-shadow:inset 0 8px 60px rgba(0,0,0,0.1),
+    inset 0 8px 8px rgba(0,0,0,0.1), inset 0 -4px 4px rgba(0,0,0,0.1);
+}
+.inner_container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
+    border-radius:50%;
+    transform: scale(0.9);
+    box-shadow:inset 0 8px 60px rgba(0,0,0,0.1),
+    inset 0 8px 8px rgba(0,0,0,0.1), inset 0 -4px 4px rgba(0,0,0,0.1);
+    transition: 0.5s ease-in-out;
+}
+
+
+.active{
+    margin: 0px auto;
+    position: absolute;
+    top: 0;
+    left: 59px;
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
+    border-radius:50%;
+    transform: scale(0.9);
+    box-shadow:inset 0 8px 60px rgba(0,0,0,0.1),
+    inset 0 8px 8px rgba(0,0,0,0.1), inset 0 -4px 4px rgba(0,0,0,0.1);
 }
