--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
     max-width: 365px;
     transition: transform 400ms linear;  
 }
-}
+
 
 
 .sub_cate .plan{
@@ -177,3 +177,47 @@ body{
         text-align: center;
     }
 }
+/*************Toggle Element***************/
+
+ 
+ .outer_container{
+     margin: 0px auto;
+     display: flex;
+     align-items: center;
+     position: relative;
+     width: 95px;
+     height: 35px;
+     border: 1px solid magenta;
+     border-radius: 35px;
+     cursor: pointer;
+     box-shadow:inset 0 8px 60px rgba(0,0,0,0.1),
+     inset 0 8px 8px rgba(0,0,0,0.1), inset 0 -4px 4px rgba(0,0,0,0.1);
+ }
+ .inner_container{
+     position: absolute;
+     top: 0;
+     left: 0;
+     border: 1px solid black;
+     width: 35px;
+     height: 35px;
+     border-radius:50%;
+     transform: scale(0.9);
+     box-shadow:inset 0 8px 60px rgba(0,0,0,0.1),
+     inset 0 8px 8px rgba(0,0,0,0.1), inset 0 -4px 4px rgba(0,0,0,0.1);
+     transition: 0.5s ease-in-out;
+ }
+ 
+ 
+ .active{
+     margin: 0px auto;
+     position: absolute;
+     top: 0;
+     left: 59px;
+     border: 1px solid black;
+     width: 35px;
+     height: 35px;
+     border-radius:50%;
+     transform: scale(0.9);
+     box-shadow:inset 0 8px 60px rgba(0,0,0,0.1),
+     inset 0 8px 8px rgba(0,0,0,0.1), inset 0 -4px 4px rgba(0,0,0,0.1);
+ }
