--- a/style.css
+++ b/style.css
@@ -179,7 +179,15 @@ body{
 }
 /*************Toggle Element***************/
 
- 
+.toggleSection{
+    margin: 0 auto;
+    /* border: 1px solid maroon; */
+    width: 250px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+} 
+
  .outer_container{
      margin: 0px auto;
      display: flex;
@@ -187,24 +195,28 @@ body{
      position: relative;
      width: 95px;
      height: 35px;
-     border: 1px solid magenta;
+     /* border: 1px solid magenta; */
      border-radius: 35px;
      cursor: pointer;
-     box-shadow:inset 0 8px 60px rgba(0,0,0,0.1),
-     inset 0 8px 8px rgba(0,0,0,0.1), inset 0 -4px 4px rgba(0,0,0,0.1);
+     background: linear-gradient(to right,hsl(236, 72%, 79%),hsl(237, 63%, 64%));
+
  }
+ .outer_container:hover{
+     background: hsl(234, 14%, 74%);
+ }
+
  .inner_container{
      position: absolute;
      top: 0;
      left: 0;
-     border: 1px solid black;
+     /* border: 1px solid black; */
      width: 35px;
      height: 35px;
      border-radius:50%;
      transform: scale(0.9);
-     box-shadow:inset 0 8px 60px rgba(0,0,0,0.1),
-     inset 0 8px 8px rgba(0,0,0,0.1), inset 0 -4px 4px rgba(0,0,0,0.1);
+     background-color: white;
      transition: 0.5s ease-in-out;
+    
  }
  
  
@@ -213,11 +225,20 @@ body{
      position: absolute;
      top: 0;
      left: 59px;
-     border: 1px solid black;
+     /* border: 1px solid black; */
      width: 35px;
      height: 35px;
      border-radius:50%;
      transform: scale(0.9);
-     box-shadow:inset 0 8px 60px rgba(0,0,0,0.1),
-     inset 0 8px 8px rgba(0,0,0,0.1), inset 0 -4px 4px rgba(0,0,0,0.1);
+     background: white;
+     background-color: white;
+ }
+
+
+ .switchPlan{
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing:1px;
+    font-weight: 400;
+    color: hsl(234, 14%, 74%);
+    font-size: 0.99em;   
  }
